All pages is done

--- a/CSS/about.css
+++ b/CSS/about.css
@@ -1,55 +1,4 @@
 
-
-.banner {
-    position: relative;
-    width: 100%;
-    max-width: 1200px;
-    margin: auto;
-    display: flex;
-    justify-content: center; /* horizontal centering */
-    align-items: center;     /* vertical centering */
-    overflow: hidden;
-    }
-
-.banner img {
-    width: 100%;
-    height: auto;
-    display: block;
-    }
-
-/* Overlay covering only the image */
-.banner .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.4); /* semi-transparent overlay */
-    z-index: 1; /* sits above image but below text */
-    }
-
-/* Text on top */
-.banner-text {
-    position: absolute;
-    z-index: 2; /* above overlay */
-    color: white;
-    font-size: 100%; /* scales with viewport */
-    font-weight: bold;
-    text-align: center;
-    padding: 0 1rem;
-    max-width: 90%;
-    }
-
-@media (max-width: 600px) {
-    .banner-text h1 {
-        font-size: 20px;
-    }
-    .banner-text p {
-        font-size: 10px;
-    }
-}
-
-
 /*====================================
             Gallery Section
 ======================================*/
@@ -97,6 +46,7 @@
 .gallery-item img:hover{
     transform:scale(1.05);
 }
+
 
 /* ===============================
    TABLET
@@ -161,6 +111,10 @@
 .team-card {
 transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
+
+.team-card p {
+    text-align: center;
+}
 .team-card:hover {
     transform: translateY(-10px);
     box-shadow: 0 10px 20px rgba(0,0,0,0.15);
@@ -180,6 +134,10 @@ transition: transform 0.3s ease, box-shadow 0.3s ease;
 /* Dark elegant background */
 .testimonial-section {
     background: #7189a5;
+}
+
+.testimonial-section p{
+    text-align: center;
 }
 
 /* Softer, floating cards */
