--- a/CSS/home.css
+++ b/CSS/home.css
@@ -1,21 +1,14 @@
 .welcome-section{
-    margin-top: 50px;
-    padding-top: 50px;
-    line-height: 2;
     text-align: justify;
 }
 
-.features{
-     margin-top: 30px;
-     padding-top: 30px;
-     padding-bottom: 50px;
-    
-}
-   
-
-.amenities img {
+.amenities img{
     max-width: 60px;
     margin-bottom: 15px;
+}
+
+.amenities p {
+    text-align: center;
 }
 
 .item{
@@ -24,6 +17,8 @@
     
 
 }
+
+
 
 
 
