--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,7 +3,23 @@ body{
 }
 
 p{
-    line-height: 2;
-    
-
+    line-height: 1.5;
+    text-align: justify;
+    font-size: 18px;
 }
+
+body h1{
+    margin-top: 50px;
+    margin-bottom: 50px;
+    font-weight: 900;
+    
+    font-size: 50px;
+}
+
+@media (max-width: 700px) {
+    body h1 {
+        font-size: 30px;
+    }
+   
+}
+
